--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
    <title>Galerie Photos - VanillaJS Moderne</title>
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-   <link rel="stylesheet" href="../template/assets/css/app.css">
+   <link rel="stylesheet" href="./assets/css/app.css">
 </head>
 <body>
   <!-- Div de l'app -->
